added params for municipality tab

--- a/internal/src/components/minimap/minimap.scss
+++ b/internal/src/components/minimap/minimap.scss
@@ -1,4 +1,6 @@
-#open-country-minimapbody {
+#municipality-minimapbody {
+    aspect-ratio: 5 / 6;
+} #open-country-minimapbody {
     aspect-ratio: 5 / 6;
 } 
 #supply-area-minimapbody {
