changed minimap aspect-ratio

--- a/internal/src/components/minimap/minimap.scss
+++ b/internal/src/components/minimap/minimap.scss
@@ -1,14 +1,15 @@
 #municipality-minimapbody {
-    aspect-ratio: 5 / 6;
-} #open-country-minimapbody {
-    aspect-ratio: 5 / 6;
+    aspect-ratio: 6 / 5;
+} 
+#open-country-minimapbody {
+    aspect-ratio: 6 / 5;
 } 
 #supply-area-minimapbody {
-    aspect-ratio: 1 / 1;
+    aspect-ratio: 6 / 5;
 } 
 #cottage-areas-minimapbody {
-    aspect-ratio: 5 / 6;
+    aspect-ratio: 6 / 5;
 }
 #villages-minimapbody {
-    aspect-ratio: 1 / 1;
+    aspect-ratio: 6 / 5;
 }
