--- a/internal/src/sharedStyles.scss
+++ b/internal/src/sharedStyles.scss
@@ -16,3 +16,8 @@
     width: 100%;
   }
 }
+.stackedbar-no-legend {
+  aspect-ratio: 3/1;
+  // aspect-ratio: auto;
+  // aria-label='Beskrivelse af grafen'
+}
